--- a/src/main/webapp/resources/css/account.css
+++ b/src/main/webapp/resources/css/account.css
@@ -2,15 +2,19 @@ th, td {
 	padding: 10px 20px 10px 20px;
 }
 
+tab1 { 
+	padding-left: 4em; 
+}
+ 
+
 .car-div {
 	min-height: 20px;
 	padding: 9px;
-	margin-bottom: 20px;
 	background-color: #f5f5f5;
 	border: 1px solid #e3e3e3;
 	border-radius: 4px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 .car-div-alert {
@@ -19,11 +23,33 @@ th, td {
 	border-color: #faebcc;
 	border-radius: 4px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-	color: #8a6d3b;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	color: #8a6d3b;
 	min-height: 20px;
 	margin-bottom: 20px;
 	padding: 9px;
+}
+
+.visit-div {
+	min-height: 20px;
+	padding: 10px;
+	background-color: #fcf8e3;
+	margin: 0px 10px 5px 5px;
+	border: 1px solid #e3e3e3;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+.visits-list-div {
+	min-height: 20px;
+	padding: 9px;
+	background-color: #fcf8e3;
+	margin: 0px 5px 10px 5px;
+	border: 1px solid #e3e3e3;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 #car-input-alert {
@@ -40,3 +66,4 @@ th, td {
 #logout-button {
 	margin: 10px;	
 }
+
