--- a/src/main/webapp/resources/css/account.css
+++ b/src/main/webapp/resources/css/account.css
@@ -1,11 +1,14 @@
-th, td {
-	padding: 10px 20px 10px 20px;
-}
-
-tab1 { 
+tab4em { 
 	padding-left: 4em; 
 }
+
+tab2em { 
+	padding-left: 2em; 
+}
  
+#contact-data td {
+	padding: 10px 20px 10px 20px;
+}
 
 .car-div {
 	min-height: 20px;
