--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,10 +1,9 @@
-.error-alert {
-	color: red;
-}
 
 #login-div {
-	background-color: #f5f5f5;
-	border: 1px solid #e3e3e3;
-	border-radius : 8px;
-	padding : 10px 40px 10px 40px;
+	background-color: rgba(0, 0, 0, 0.9);
+	box-shadow: 0px 0px 10px 0px #9c0000;
+	padding: 20px 20px 20px 20px;
+	border: 1px solid rgba(0, 0, 0, 0);
+	border-radius: 12px;
+	margin-top: 100px;
 }
