--- a/src/main/webapp/resources/css/account.css
+++ b/src/main/webapp/resources/css/account.css
@@ -1,13 +1,9 @@
-tab4em { 
-	padding-left: 4em; 
+tab4em {
+	padding-left: 4em;
 }
 
-tab2em { 
-	padding-left: 2em; 
-}
- 
-#contact-data td {
-	padding: 10px 20px 10px 20px;
+tab2em {
+	padding-left: 2em;
 }
 
 .car-div {
@@ -18,29 +14,20 @@ tab2em {
 	border-radius: 4px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	color: black;
 }
 
-.car-div-alert {
-	background-color: #fcf8e3;
-	border: 1px solid #e3e3e3;
-	border-color: #faebcc;
-	border-radius: 4px;
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-	color: #8a6d3b;
-	min-height: 20px;
-	margin-bottom: 20px;
-	padding: 9px;
-}
 
 .visit-div {
 	min-height: 20px;
 	padding: 10px;
 	background-color: #fcf8e3;
 	margin: 0px 10px 5px 5px;
-	border: 1px solid #e3e3e3;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	border: 1px solid #bababa;
+	border-radius: 3px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	color: black;
 }
 
 .visits-list-div {
@@ -57,16 +44,42 @@ tab2em {
 
 #car-input-alert {
 	color: red;
-}
 
-#add-car-form {
-	border: 1px solid #e3e3e3;
-	background-color: #f5f5f5;
-	border-radius: 4px;
-	padding: 9px;
 }
 
 #logout-button {
-	margin: 10px;	
+	margin: 10px;
 }
 
+#contact-data td {
+	padding: 15px 10px 15px 0px;
+}
+
+#account-div {
+	background-color: rgba(0, 0, 0, 0.9);
+	box-shadow: 0px 0px 10px 0px #9c0000;
+	margin-top: 20px;
+	padding-bottom: 30px;
+	border: 1px solid rgba(0, 0, 0, 0);
+	border-radius: 12px;
+	min-height: 650px;
+}
+
+#phone-input,
+#email-input {
+	color: black;	
+	width: 150px;
+}
+
+#account-alert {
+	background-color: #fcf8e3;
+	border: 1px solid #e3e3e3;
+	border-color: #faebcc;
+	border-radius: 4px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	color: #8a6d3b;
+	min-height: 20px;
+	margin-top: 20px;
+	padding: 12px;
+}
