--- a/src/main/webapp/resources/css/registration.css
+++ b/src/main/webapp/resources/css/registration.css
@@ -1,8 +1,13 @@
 #registration-div {
 	background-color: rgba(0, 0, 0, 0.9);
 	box-shadow: 0px 0px 10px 0px #9c0000;
-	padding: 20px 25px 20px 20px;
+	padding: 20px 20px 20px 20px;
 	border: 1px solid rgba(0, 0, 0, 0);
 	border-radius: 12px;
 	margin-top: 50px;
+}
+
+#registration-form {
+	padding-right: 20px;
+	padding-left: 20px;
 }
